--- a/cafeList.html
+++ b/cafeList.html
@@ -96,8 +96,8 @@
             <h2 class="section-title yekanFont rtl text-right">لیست کافه ها</h2>
             <hr>
             <div class="row">
-                <div class="col-md-4">
-                    <div class="card card-product card-plain cafeCard">
+                <div class="col-md-4 cafeCard">
+                    <div class="card card-product card-plain">
                         <div class="card-image">
                             <a href="#pablo">
                                 <img src="assets/img/gucci.jpg" alt="">
@@ -135,8 +135,8 @@
                     </div>
                 </div>
 
-                <div class="col-md-4">
-                    <div class="card card-product card-plain cafeCard">
+                <div class="col-md-4 cafeCard">
+                    <div class="card card-product card-plain">
                         <div class="card-image">
                             <a href="#pablo">
                                 <img src="assets/img/gucci.jpg" alt="">
@@ -174,129 +174,8 @@
                     </div>
                 </div>
 
-                <div class="col-md-4">
-                    <div class="card card-product card-plain cafeCard">
-                        <div class="card-image">
-                            <a href="#pablo">
-                                <img src="assets/img/gucci.jpg" alt="">
-                            </a>
-                            <div class="colored-shadow"
-                                 style="background-image: url(assets/img/gucci.jpg); opacity: 1;"></div>
-                        </div>
-                        <div class="card-content">
-                            <h4 class="card-title">
-                                <a href="#pablo" class="yekanFont">نام کافه</a>
-                            </h4>
-                            <p class="card-description yekanFont rtl text-justify">
-                                لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک
-                                است.
-                            </p>
-                            <div class="footer">
-                                <div class="pull-right">
-                                    <div class="price-container">
-                                        <!--<span class="price price-old"> €1,430</span>-->
-                                        <span class="price price-new yekanFont">لایک ها : 20</span>
-                                    </div>
-                                    <div class="stats">
-                                        <button type="button" rel="tooltip" title=""
-                                                class="btn btn-just-icon btn-simple btn-rose yekanFont"
-                                                data-original-title="لایک کنید!">
-                                            <i class="material-icons">favorite</i>
-                                        </button>
-                                    </div>
-                                </div>
-                                <div class="pull-left">
-                                    <a href="#" class="btn btn-primary yekanFont ">ورود به صفحه کافه</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-
-            </div>
-            <hr>
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="card card-product card-plain cafeCard">
-                        <div class="card-image">
-                            <a href="#pablo">
-                                <img src="assets/img/gucci.jpg" alt="">
-                            </a>
-                            <div class="colored-shadow"
-                                 style="background-image: url(assets/img/gucci.jpg); opacity: 1;"></div>
-                        </div>
-                        <div class="card-content">
-                            <h4 class="card-title">
-                                <a href="#pablo" class="yekanFont">نام کافه</a>
-                            </h4>
-                            <p class="card-description yekanFont rtl text-justify">
-                                لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک
-                                است.
-                            </p>
-                            <div class="footer">
-                                <div class="pull-right">
-                                    <div class="price-container">
-                                        <!--<span class="price price-old"> €1,430</span>-->
-                                        <span class="price price-new yekanFont">لایک ها : 20</span>
-                                    </div>
-                                    <div class="stats">
-                                        <button type="button" rel="tooltip" title=""
-                                                class="btn btn-just-icon btn-simple btn-rose yekanFont"
-                                                data-original-title="لایک کنید!">
-                                            <i class="material-icons">favorite</i>
-                                        </button>
-                                    </div>
-                                </div>
-                                <div class="pull-left">
-                                    <a href="#" class="btn btn-primary yekanFont ">ورود به صفحه کافه</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-4">
-                    <div class="card card-product card-plain cafeCard">
-                        <div class="card-image">
-                            <a href="#pablo">
-                                <img src="assets/img/gucci.jpg" alt="">
-                            </a>
-                            <div class="colored-shadow"
-                                 style="background-image: url(assets/img/gucci.jpg); opacity: 1;"></div>
-                        </div>
-                        <div class="card-content">
-                            <h4 class="card-title">
-                                <a href="#pablo" class="yekanFont">نام کافه</a>
-                            </h4>
-                            <p class="card-description yekanFont rtl text-justify">
-                                لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک
-                                است.
-                            </p>
-                            <div class="footer">
-                                <div class="pull-right">
-                                    <div class="price-container">
-                                        <!--<span class="price price-old"> €1,430</span>-->
-                                        <span class="price price-new yekanFont">لایک ها : 20</span>
-                                    </div>
-                                    <div class="stats">
-                                        <button type="button" rel="tooltip" title=""
-                                                class="btn btn-just-icon btn-simple btn-rose yekanFont"
-                                                data-original-title="لایک کنید!">
-                                            <i class="material-icons">favorite</i>
-                                        </button>
-                                    </div>
-                                </div>
-                                <div class="pull-left">
-                                    <a href="#" class="btn btn-primary yekanFont ">ورود به صفحه کافه</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-4">
-                    <div class="card card-product card-plain cafeCard">
+                <div class="col-md-4 cafeCard">
+                    <div class="card card-product card-plain">
                         <div class="card-image">
                             <a href="#pablo">
                                 <img src="assets/img/gucci.jpg" alt="">
@@ -338,8 +217,8 @@
             </div>
             <hr>
             <div class="row">
-                <div class="col-md-4">
-                    <div class="card card-product card-plain cafeCard">
+                <div class="col-md-4 cafeCard">
+                    <div class="card card-product card-plain ">
                         <div class="card-image">
                             <a href="#pablo">
                                 <img src="assets/img/gucci.jpg" alt="">
@@ -377,8 +256,8 @@
                     </div>
                 </div>
 
-                <div class="col-md-4">
-                    <div class="card card-product card-plain cafeCard">
+                <div class="col-md-4 cafeCard">
+                    <div class="card card-product card-plain ">
                         <div class="card-image">
                             <a href="#pablo">
                                 <img src="assets/img/gucci.jpg" alt="">
@@ -416,8 +295,8 @@
                     </div>
                 </div>
 
-                <div class="col-md-4">
-                    <div class="card card-product card-plain cafeCard">
+                <div class="col-md-4 cafeCard">
+                    <div class="card card-product card-plain ">
                         <div class="card-image">
                             <a href="#pablo">
                                 <img src="assets/img/gucci.jpg" alt="">
@@ -459,8 +338,8 @@
             </div>
             <hr>
             <div class="row">
-                <div class="col-md-4">
-                    <div class="card card-product card-plain cafeCard">
+                <div class="col-md-4 cafeCard">
+                    <div class="card card-product card-plain ">
                         <div class="card-image">
                             <a href="#pablo">
                                 <img src="assets/img/gucci.jpg" alt="">
@@ -498,8 +377,8 @@
                     </div>
                 </div>
 
-                <div class="col-md-4">
-                    <div class="card card-product card-plain cafeCard">
+                <div class="col-md-4 cafeCard">
+                    <div class="card card-product card-plain ">
                         <div class="card-image">
                             <a href="#pablo">
                                 <img src="assets/img/gucci.jpg" alt="">
@@ -537,8 +416,129 @@
                     </div>
                 </div>
 
-                <div class="col-md-4">
-                    <div class="card card-product card-plain cafeCard">
+                <div class="col-md-4 cafeCard">
+                    <div class="card card-product card-plain ">
+                        <div class="card-image">
+                            <a href="#pablo">
+                                <img src="assets/img/gucci.jpg" alt="">
+                            </a>
+                            <div class="colored-shadow"
+                                 style="background-image: url(assets/img/gucci.jpg); opacity: 1;"></div>
+                        </div>
+                        <div class="card-content">
+                            <h4 class="card-title">
+                                <a href="#pablo" class="yekanFont">نام کافه</a>
+                            </h4>
+                            <p class="card-description yekanFont rtl text-justify">
+                                لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک
+                                است.
+                            </p>
+                            <div class="footer">
+                                <div class="pull-right">
+                                    <div class="price-container">
+                                        <!--<span class="price price-old"> €1,430</span>-->
+                                        <span class="price price-new yekanFont">لایک ها : 20</span>
+                                    </div>
+                                    <div class="stats">
+                                        <button type="button" rel="tooltip" title=""
+                                                class="btn btn-just-icon btn-simple btn-rose yekanFont"
+                                                data-original-title="لایک کنید!">
+                                            <i class="material-icons">favorite</i>
+                                        </button>
+                                    </div>
+                                </div>
+                                <div class="pull-left">
+                                    <a href="#" class="btn btn-primary yekanFont ">ورود به صفحه کافه</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+            </div>
+            <hr>
+            <div class="row">
+                <div class="col-md-4 cafeCard">
+                    <div class="card card-product card-plain ">
+                        <div class="card-image">
+                            <a href="#pablo">
+                                <img src="assets/img/gucci.jpg" alt="">
+                            </a>
+                            <div class="colored-shadow"
+                                 style="background-image: url(assets/img/gucci.jpg); opacity: 1;"></div>
+                        </div>
+                        <div class="card-content">
+                            <h4 class="card-title">
+                                <a href="#pablo" class="yekanFont">نام کافه</a>
+                            </h4>
+                            <p class="card-description yekanFont rtl text-justify">
+                                لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک
+                                است.
+                            </p>
+                            <div class="footer">
+                                <div class="pull-right">
+                                    <div class="price-container">
+                                        <!--<span class="price price-old"> €1,430</span>-->
+                                        <span class="price price-new yekanFont">لایک ها : 20</span>
+                                    </div>
+                                    <div class="stats">
+                                        <button type="button" rel="tooltip" title=""
+                                                class="btn btn-just-icon btn-simple btn-rose yekanFont"
+                                                data-original-title="لایک کنید!">
+                                            <i class="material-icons">favorite</i>
+                                        </button>
+                                    </div>
+                                </div>
+                                <div class="pull-left">
+                                    <a href="#" class="btn btn-primary yekanFont ">ورود به صفحه کافه</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4 cafeCard">
+                    <div class="card card-product card-plain ">
+                        <div class="card-image">
+                            <a href="#pablo">
+                                <img src="assets/img/gucci.jpg" alt="">
+                            </a>
+                            <div class="colored-shadow"
+                                 style="background-image: url(assets/img/gucci.jpg); opacity: 1;"></div>
+                        </div>
+                        <div class="card-content">
+                            <h4 class="card-title">
+                                <a href="#pablo" class="yekanFont">نام کافه</a>
+                            </h4>
+                            <p class="card-description yekanFont rtl text-justify">
+                                لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک
+                                است.
+                            </p>
+                            <div class="footer">
+                                <div class="pull-right">
+                                    <div class="price-container">
+                                        <!--<span class="price price-old"> €1,430</span>-->
+                                        <span class="price price-new yekanFont">لایک ها : 20</span>
+                                    </div>
+                                    <div class="stats">
+                                        <button type="button" rel="tooltip" title=""
+                                                class="btn btn-just-icon btn-simple btn-rose yekanFont"
+                                                data-original-title="لایک کنید!">
+                                            <i class="material-icons">favorite</i>
+                                        </button>
+                                    </div>
+                                </div>
+                                <div class="pull-left">
+                                    <a href="#" class="btn btn-primary yekanFont ">ورود به صفحه کافه</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4 cafeCard">
+                    <div class="card card-product card-plain ">
                         <div class="card-image">
                             <a href="#pablo">
                                 <img src="assets/img/gucci.jpg" alt="">
