removing #pablo buggy link target

--- a/auth.html
+++ b/auth.html
@@ -90,13 +90,13 @@
                         <div class="header header-primary text-center">
                             <h4 class="card-title yekanFont">ورود کاربر / کافه</h4>
                             <div class="social-line">
-                                <!--<a href="#pablo" class="btn btn-just-icon btn-simple">-->
+                                <!--<a href="" class="btn btn-just-icon btn-simple">-->
                                 <!--<i class="fa fa-facebook-square"></i>-->
                                 <!--</a>-->
-                                <!--<a href="#pablo" class="btn btn-just-icon btn-simple">-->
+                                <!--<a href="" class="btn btn-just-icon btn-simple">-->
                                 <!--<i class="fa fa-twitter"></i>-->
                                 <!--</a>-->
-                                <a href="#pablo" class="btn btn-just-icon btn-simple">
+                                <a href="" class="btn btn-just-icon btn-simple">
                                     <i class="fa fa-google-plus"></i>
                                 </a>
                             </div>
@@ -142,8 +142,8 @@
                             </div> -->
                         </div>
                         <div class="footer text-center">
-                            <a href="#pablo" class="btn btn-primary btn-simple btn-wd btn-lg yekanFont normalFontSize">ورود</a>
-                            <a href="#pablo" class="btn btn-primary btn-simple btn-wd btn-lg yekanFont">فراموشی / <باز></باز>یابی رمز عبور</a>
+                            <a href="" class="btn btn-primary btn-simple btn-wd btn-lg yekanFont normalFontSize">ورود</a>
+                            <a href="" class="btn btn-primary btn-simple btn-wd btn-lg yekanFont">فراموشی / <باز></باز>یابی رمز عبور</a>
                         </div>
                     </form>
                 </div>
@@ -154,13 +154,13 @@
                         <div class="header header-info text-center">
                             <h4 class="card-title yekanFont">ثبت نام کاربر</h4>
                             <div class="social-line">
-                                <!--<a href="#pablo" class="btn btn-just-icon btn-simple">-->
+                                <!--<a href="" class="btn btn-just-icon btn-simple">-->
                                 <!--<i class="fa fa-facebook-square"></i>-->
                                 <!--</a>-->
-                                <!--<a href="#pablo" class="btn btn-just-icon btn-simple">-->
+                                <!--<a href="" class="btn btn-just-icon btn-simple">-->
                                 <!--<i class="fa fa-twitter"></i>-->
                                 <!--</a>-->
-                                <a href="#pablo" class="btn btn-just-icon btn-simple">
+                                <a href="" class="btn btn-just-icon btn-simple">
                                     <i class="fa fa-google-plus"></i>
                                 </a>
                             </div>
@@ -215,7 +215,7 @@
                             </div> -->
                         </div>
                         <div class="footer text-center">
-                            <a href="#pablo" class="btn btn-info btn-simple btn-wd btn-lg yekanFont normalFontSize">ثبت نام</a>
+                            <a href="" class="btn btn-info btn-simple btn-wd btn-lg yekanFont normalFontSize">ثبت نام</a>
                         </div>
                     </form>
                 </div>
