fixing login/register page overlap bug

--- a/auth.html
+++ b/auth.html
@@ -25,7 +25,7 @@
         }
     </style>
 </head>
-<body style="height:100%">
+<body class="login-page">
 <!--<a href="#" class="goUpBtn btn btn-round btn-default btn-fab btn-fab-mini" id="goUpBtn" style="z-index:99999;position:absolute;bottom:0;left:0;">-->
 <!--<i class="material-icons">keyboard_arrow_up</i>-->
 <!--</a>-->
