advanced search area removed due to supervisor's notes

--- a/bookletList.html
+++ b/bookletList.html
@@ -205,22 +205,22 @@
     <div class="main">
         <div class="container">
             <div class="row">
-                <div class="col-md-6 text-center">
-                    <button class="btn btn-info yekanFont w-100" style="font-size:20px;" data-toggle="modal"
-                            data-target="#sneedsAdvancedSearchModal">
-                        <i class="material-icons">
-                            search
-                        </i>
-                        <span>
-                        جستجوی پیشرفته در جزوات
-                        </span>
-                        <i class="material-icons">
-                            search
-                        </i>
-                    </button>
-                </div>
+                <!--<div class="col-md-6 text-center">-->
+                    <!--<button class="btn btn-info yekanFont w-100" style="font-size:20px;" data-toggle="modal"-->
+                            <!--data-target="#sneedsAdvancedSearchModal">-->
+                        <!--<i class="material-icons">-->
+                            <!--search-->
+                        <!--</i>-->
+                        <!--<span>-->
+                        <!--جستجوی پیشرفته در جزوات-->
+                        <!--</span>-->
+                        <!--<i class="material-icons">-->
+                            <!--search-->
+                        <!--</i>-->
+                    <!--</button>-->
+                <!--</div>-->
 
-                <div class="col-md-6 text-center">
+                <div class="col-md-12 text-center">
                     <button class="btn btn-success yekanFont w-100" style="font-size:20px;" data-toggle="modal" data-target="#loginModal">
                         <i class="material-icons">
                             search
