top navigation alert before search button added due to supervisor notes

--- a/bookletList.html
+++ b/bookletList.html
@@ -205,19 +205,34 @@
     <div class="main">
         <div class="container">
             <div class="row">
+                <div class="col-md-12 text-center">
+                    <ul class="pagination pagination-primary yekanFont">
+                        <!--<li id="goPrevPage"><a href="#">></a></li>-->
+                        <!--<li><a href="#"></a></li>-->
+                        <li class="active"><a href="#">مهندسی کامپیوتر</a></li>
+                        <li><a href="#">/</a></li>
+                        <li><a href="#">جزوات</a></li>
+                        <li><a href="#">/</a></li>
+                        <li><a href="#">صفحه اول</a></li>
+                        <li><a href="#">مسیر شما : </a></li>
+                        <!--<li id="goNextPage"><a href="#"><</a></li>-->
+                    </ul>
+                </div>
+            </div>
+            <div class="row">
                 <!--<div class="col-md-6 text-center">-->
-                    <!--<button class="btn btn-info yekanFont w-100" style="font-size:20px;" data-toggle="modal"-->
-                            <!--data-target="#sneedsAdvancedSearchModal">-->
-                        <!--<i class="material-icons">-->
-                            <!--search-->
-                        <!--</i>-->
-                        <!--<span>-->
-                        <!--جستجوی پیشرفته در جزوات-->
-                        <!--</span>-->
-                        <!--<i class="material-icons">-->
-                            <!--search-->
-                        <!--</i>-->
-                    <!--</button>-->
+                <!--<button class="btn btn-info yekanFont w-100" style="font-size:20px;" data-toggle="modal"-->
+                <!--data-target="#sneedsAdvancedSearchModal">-->
+                <!--<i class="material-icons">-->
+                <!--search-->
+                <!--</i>-->
+                <!--<span>-->
+                <!--جستجوی پیشرفته در جزوات-->
+                <!--</span>-->
+                <!--<i class="material-icons">-->
+                <!--search-->
+                <!--</i>-->
+                <!--</button>-->
                 <!--</div>-->
 
                 <div class="col-md-12 text-center">
@@ -235,8 +250,6 @@
                 </div>
 
             </div>
-        </div>
-        <div class="container">
 
             <div id="bookletRow1" class="row">
                 <div class="col-md-3">
@@ -601,6 +614,7 @@
                     </div>
                 </div>
             </div>
+
             <div class="row">
                 <div class="col-md-12 text-center">
                     <ul class="pagination pagination-primary">
