--- a/cafeList.html
+++ b/cafeList.html
@@ -93,6 +93,20 @@
 <div class="main main-raised">
     <div class="section">
         <div class="container">
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <ul class="pagination pagination-primary yekanFont">
+                        <!--<li id="goPrevPage"><a href="#">></a></li>-->
+                        <!--<li><a href="#"></a></li>-->
+                        <li class="active"><a href="#">کافه ها</a></li>
+                        <li><a href="#">/</a></li>
+                        <li><a href="#">صفحه اول</a></li>
+                        <li><a href="#">مسیر شما : </a></li>
+                        <!--<li id="goNextPage"><a href="#"><</a></li>-->
+                    </ul>
+                </div>
+            </div>
+
             <h2 class="section-title yekanFont rtl text-right">لیست کافه ها</h2>
             <hr>
             <div class="row">
