top menu updated for cafe self page and cafe self top menu added

--- a/booklet.html
+++ b/booklet.html
@@ -50,10 +50,9 @@
                 <li class="pull-right"><a href="bookletList.html">جزوات</a></li>
                 <li class="pull-right"><a href="cafeList.html">کافه ها</a></li>
                 <li class="pull-right active"><a href="booklet.html">صفحه تکی جزوه</a></li>
+                <li class="pull-right"><a href="cafe.html">صفحه تکی کافه</a></li>
                 <li class="pull-right"><a href="#" target="">لینک تست 1</a></li>
-                <li class="pull-right"><a href="#" target="">لینک تست 2</a></li>
-                <li class="pull-right"><a href="auth.html"
-                                          class="normalFontSize2 text-right rtl btn btn-round btn-primary">
+                <li class="pull-right"><a href="auth.html" class="normalFontSize2 text-right rtl btn btn-round btn-primary">
                     <i class="fas fa-sign-in-alt"></i>
                     ورود / عضویت
                 </a></li>
