--- a/bookletList.html
+++ b/bookletList.html
@@ -55,8 +55,8 @@
                 <li class="pull-right active"><a href="bookletList.html">جزوات</a></li>
                 <li class="pull-right"><a href="cafeList.html" target="nk">کافه ها</a></li>
                 <li class="pull-right"><a href="booklet.html" target="">صفحه تکی جزوه</a></li>
+                <li class="pull-right"><a href="cafe.html">صفحه تکی کافه</a></li>
                 <li class="pull-right"><a href="#" target="">لینک تست 1</a></li>
-                <li class="pull-right"><a href="#" target="">لینک تست 2</a></li>
                 <li class="pull-right"><a href="auth.html" class="normalFontSize2 text-right rtl btn btn-round btn-primary">
                     <i class="fas fa-sign-in-alt"></i>
                     ورود / عضویت
