--- a/booklet.html
+++ b/booklet.html
@@ -166,9 +166,8 @@
                                         </h4>
                                     </a>
                                 </div>
-
-                                <div id="collapseThree" class="panel-collapse collapse" aria-expanded="false"
-                                     style="height: 0;">
+                                <!--
+                                <div id="collapseThree" class="panel-collapse collapse" aria-expanded="false" style="height: 0;">
                                     <div class="panel-body">
                                         <form class="form" method="" action="">
                                             <div class="card-content">
@@ -190,7 +189,7 @@
                                             </div>
                                         </form>
                                     </div>
-                                </div>
+                                </div> -->
                             </div>
 
                         </div>
