fixing report bug that was deleted before

--- a/booklet.html
+++ b/booklet.html
@@ -156,17 +156,17 @@
                             <!--</div>-->
 
                             <div class="panel panel-border panel-default">
-                                <div class="panel-heading" role="tab" id="headingThree">
-                                    <a role="button" data-toggle="collapse" data-parent="#accordion"
-                                       href="#collapseThree" aria-controls="collapseOne" class="collapsed"
-                                       aria-expanded="false">
-                                        <h4 class="panel-title text-danger yekanFont rtl">
-                                            گزارش خرابی / مشکل در جزوه
-                                            <i class="material-icons">keyboard_arrow_down</i>
-                                        </h4>
-                                    </a>
-                                </div>
-                                <!--
+                                <!--<div class="panel-heading" role="tab" id="headingThree">-->
+                                    <!--<a role="button" data-toggle="collapse" data-parent="#accordion"-->
+                                       <!--href="#collapseThree" aria-controls="collapseOne" class="collapsed"-->
+                                       <!--aria-expanded="false">-->
+                                        <!--<h4 class="panel-title text-danger yekanFont rtl">-->
+                                            <!--گزارش خرابی / مشکل در جزوه-->
+                                            <!--<i class="material-icons">keyboard_arrow_down</i>-->
+                                        <!--</h4>-->
+                                    <!--</a>-->
+                                <!--</div>-->
+
                                 <div id="collapseThree" class="panel-collapse collapse" aria-expanded="false" style="height: 0;">
                                     <div class="panel-body">
                                         <form class="form" method="" action="">
@@ -189,7 +189,7 @@
                                             </div>
                                         </form>
                                     </div>
-                                </div> -->
+                                </div>
                             </div>
 
                         </div>
